# minicars-control-station

./: .gitignore  COMMIT_COMMANDS.md  COMMIT_STREAM_FIX.md  DIAGNOSTIC_REPORT.md  GITHUB_ACTIONS_STATUS.md  GIT_STATUS_REPORT.md  IMPLEMENTATION_COMPLETE.md  JETSON_DEPLOYMENT_STEPS.md  JETSON_DEPLOYMENT_YOUR_SETUP.md  JETSON_GIT_MERGE_FIX.md  JOYSTICK_DEPLOYMENT_GUIDE.md  README.md  REPO_FIX_SUMMARY.md  deploy_to_jetson.sh  pytest.ini
.github/workflows/: build-windows.yml  ci.yml
backend/: .env.example  README.md  backend.spec  build.py  main.py  requirements-dev.txt  requirements.txt  start_receiver.py
backend/config/: control_profile.json
backend/minicars_backend/: __init__.py  api.py  config.py  control_profiles.py  process_registry.py  settings.py
backend/tests/: test_health.py
desktop/: .env.example  README.md  index.html  package-lock.json  package.json
desktop/scripts/: check-windows-env.ps1
desktop/src/: App.tsx  index.css  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: backend.rs  main.rs
docs/: ARCHITECTURE_PROPOSAL.md  CORRECCIONES_FASE_2_5.md  DEPLOY_STREAM_FIX.md  DESKTOP_BACKEND_BUNDLING.md  DEVELOPMENT.md  FASE0_ANALISIS_SERVICIOS.md  FIX_PYTHON_COMPAT.md  FLUJO_ANALISIS_FASE1.md  IMPLEMENTATION_TODO.md  JETSON_GIT_PULL.md  JETSON_PYTHON_VERSION.md  JETSON_SUDO_CONFIG.md  JOYSTICK_AUDIT_REPORT.md  JOYSTICK_SUBSYSTEM_STATUS.md  JOYSTICK_SYSTEM_SUMMARY.md  PLAN_FIX_STREAM_SUPERVISOR.md  PRUEBAS_BACKEND_BUNDLING.md  RESUMEN_STREAMING_SUPERVISOR.md  STREAMING_JETSON_AUTOSTART.md  joystick_control_notes.md  testing_joystick.md  windows-build-requirements.md
jetson/: README.md  deploy_services.sh  minicars-joystick.service  minicars-streamer.service  start_streamer.py  stream_config.py  stream_supervisor.py  tcp_uart_bridge.py
jetson/config/: stream_config.json
scripts/: check-windows-env.ps1
tools/deploy/: README.md  (+1 more)
(+21 files in other folders)
