[package]
name = "minicars-control-station"
version = "0.1.0"
description = "MiniCars Control Station \u2013 Desktop app using Tauri"
authors = ["Rodrigo Bermúdez"]
license = "MIT"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []


