[package]
name = "minicars-control-station"
version = "0.1.0"
description = "MiniCars Control Station \u2013 Desktop app using Tauri"
authors = ["Rodrigo Bermúdez"]
license = "MIT"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking"] }

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]


