[package]
name = "minicars-control-station"
version = "0.1.0"
description = "MiniCars Control Station \u2013 Desktop app using Tauri"
authors = ["Rodrigo Bermúdez"]
license = "MIT"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking"] }

# Nota:
# Tauri CLI compila con `--features custom-protocol` cuando usamos un protocolo
# personalizado en tauri.conf.json. Esta feature debe existir aquí para evitar
# errores de build en CI.
[features]
default = []
custom-protocol = ["tauri/custom-protocol"]


